--- a/story_telling.qmd
+++ b/story_telling.qmd
@@ -1,11 +1,10 @@
 ---
 title: "about me"
 subtitle: "my data science portfolio"
-# use quarto markdown to 
+ 
 ---
 
-# Title 1 Header
-## Title 2 Header
+Born in Vegas and grew up in MA.
 
 [MarkDown Basics](https://quarto.org/docs/authoring/markdown-basics.html#links-images)
 
